--- a/package.yaml
+++ b/package.yaml
@@ -35,7 +35,7 @@ tests:
     dependencies:
       - preql
       - containers >= 0.6.2.1
-      - generic-random < 1.3.1
+      - generic-random
       - tasty >= 1.2.3
       - tasty-hunit >= 0.10.0
       - hedgehog >= 1.0.3
@@ -48,7 +48,7 @@ build-tools:
 dependencies:
   - aeson >= 1.4.7.1
   - array >= 0.5.4.0
-  - base >= 4.13.0.0 && < 4.15
+  - base >= 4.13.0.0
   - binary-parser >= 0.5.6
   - bytestring >= 0.10.10.0
   - bytestring-strict-builder >= 0.4.5.3
