--- a/preql.cabal
+++ b/preql.cabal
@@ -81,7 +81,7 @@ library
   build-depends:
       aeson >=1.4.7.1
     , array >=0.5.4.0
-    , base >=4.13.0.0 && <4.15
+    , base >=4.13.0.0
     , binary-parser >=0.5.6
     , bytestring >=0.10.10.0
     , bytestring-strict-builder >=0.4.5.3
@@ -121,13 +121,13 @@ test-suite tests
   build-depends:
       aeson >=1.4.7.1
     , array >=0.5.4.0
-    , base >=4.13.0.0 && <4.15
+    , base >=4.13.0.0
     , binary-parser >=0.5.6
     , bytestring >=0.10.10.0
     , bytestring-strict-builder >=0.4.5.3
     , containers >=0.6.2.1
     , contravariant >=1.5.2
-    , generic-random <1.3.1
+    , generic-random
     , hedgehog >=1.0.3
     , mtl >=2.2.2
     , postgresql-binary >=0.12.2
@@ -162,7 +162,7 @@ benchmark pgbench
   build-depends:
       aeson >=1.4.7.1
     , array >=0.5.4.0
-    , base >=4.13.0.0 && <4.15
+    , base >=4.13.0.0
     , binary-parser >=0.5.6
     , bytestring >=0.10.10.0
     , bytestring-strict-builder >=0.4.5.3
