--- a/package.yaml
+++ b/package.yaml
@@ -63,6 +63,7 @@ dependencies:
   - th-lift-instances >= 0.1.17
   - time >= 1.9.3
   - transformers >= 0.5.6.2
+  - unordered-containers
   - uuid >= 1.3.13
   - vector >= 0.12.1.2
   - vector-sized >= 1.4.1
