--- a/preql.cabal
+++ b/preql.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b190d5d3f47be53f9b2e296709d767413297743fb70c4a603625b28ff93f3a77
+-- hash: f85d73d46cfe3c86e90eb51fb9051189eb35a1904c871d85e968d3ed2db7dd55
 
 name:           preql
 version:        0.5
@@ -61,7 +61,6 @@ library
       Preql.QuasiQuoter.Syntax.Syntax
       Preql.QuasiQuoter.Syntax.TH
       Preql.Wire
-      Preql.Wire.Decode
       Preql.Wire.Errors
       Preql.Wire.Internal
       Preql.Wire.Orphans
@@ -97,6 +96,7 @@ library
     , th-lift-instances >=0.1.17
     , time >=1.9.3
     , transformers >=0.5.6.2
+    , unordered-containers
     , uuid >=1.3.13
     , vector >=0.12.1.2
     , vector-sized >=1.4.1
@@ -144,6 +144,7 @@ test-suite tests
     , th-lift-instances >=0.1.17
     , time >=1.9.3
     , transformers >=0.5.6.2
+    , unordered-containers
     , uuid >=1.3.13
     , vector >=0.12.1.2
     , vector-sized >=1.4.1
@@ -181,6 +182,7 @@ benchmark pgbench
     , th-lift-instances >=0.1.17
     , time >=1.9.3
     , transformers >=0.5.6.2
+    , unordered-containers
     , uuid >=1.3.13
     , vector >=0.12.1.2
     , vector-sized >=1.4.1
